kubernetes/overlays/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: centmatch
  labels:
    app: centmatch
    app.kubernetes.io/name: centmatch
    app.kubernetes.io/instance: centmatch-production
    app.kubernetes.io/part-of: centmatch
