kubernetes/overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    kubernetes.io/ingress.class: istio
  labels:
    app.kubernetes.io/name: centmatch
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: centmatch
spec:
  tls:
    - hosts:
        - centmatch.arz.st
      secretName: wildcard
  rules:
    - host: centmatch.arz.st
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
